tests/error/no_compat_sub2.gw
// [contains] incompatible array subscript type
 Object o;
int i[o];
